--- a/index.html
+++ b/index.html
@@ -3,77 +3,365 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Для тебя</title>
+  <title>Моё письмо тебе</title>
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      background-color: #000;
-      color: #fff;
+      background: black;
+      color: white;
       font-family: 'Great Vibes', cursive;
-      font-size: 1.8rem;
       display: flex;
-      flex-direction: column;
       align-items: center;
       justify-content: center;
-      height: 100vh;
+      min-height: 100vh;
+      overflow: hidden;
+    }
+
+    #start-screen, #content, #final {
+      position: absolute;
       text-align: center;
-    }
-    #text {
-      max-width: 800px;
       padding: 20px;
+      transition: opacity 1s ease;
     }
-    #question {
-      display: none;
-      font-size: 2rem;
-      margin-top: 30px;
+
+    #start-screen {
+      opacity: 1;
     }
-    button {
-      background-color: #fff;
-      color: #000;
+
+    #content, #final {
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    h1 {
+      font-size: 2em;
+      margin-bottom: 20px;
+    }
+
+    .btn {
+      background: #ff69b4;
       border: none;
-      padding: 10px 20px;
-      font-size: 1rem;
+      padding: 12px 24px;
+      border-radius: 30px;
+      font-size: 1.1em;
+      color: white;
       cursor: pointer;
       margin: 10px;
+      transition: background 0.3s ease;
+    }
+
+    .btn:hover {
+      background: #ff1493;
+    }
+
+    #text {
+      font-size: 1.5em;
+      margin-bottom: 30px;
+      max-width: 600px;
+      line-height: 1.5;
+      min-height: 120px;
+      opacity: 1;
+      transition: opacity 0.6s ease;
+    }
+
+    #nav-buttons, #choice-buttons {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+
+    canvas {
+      position: fixed;
+      top: 0;
+      left: 0;
+      pointer-events: none;
+      z-index: 999;
     }
   </style>
 </head>
 <body>
-  <div id="text"></div>
-  <div id="question">
-    Ты станешь моей девушкой?<br />
-    <button onclick="alert('Ты сделала меня самым счастливым человеком!')">Да</button>
-    <button onclick="alert('Я всё равно буду ждать :)')">Нет</button>
+  <canvas></canvas>
+
+  <div id="start-screen">
+    <h1>Моё письмо тебе, моя любовь</h1>
+    <button class="btn" onclick="start()">Открыть</button>
   </div>
-  <audio id="bg-music" src="bg.mp3" autoplay loop></audio>
+
+  <div id="content">
+    <div id="text"></div>
+    <div id="nav-buttons">
+      <button class="btn" onclick="prevLine()">Назад</button>
+      <button class="btn" onclick="nextLine()">Вперёд</button>
+    </div>
+  </div>
+
+  <div id="final">
+    <h1>Ты станешь моей девушкой?</h1>
+    <div id="choice-buttons">
+      <button class="btn" onclick="accept()">Да</button>
+      <button class="btn" onclick="decline()">Нет</button>
+    </div>
+  </div>
+
+  <audio id="music" src="music.mp3"></audio>
 
   <script>
-    const text = `С тобой даже самый обычный день кажется особенным.
-Ты умеешь молчать так, что в этой тишине становится по-настоящему спокойно — уютно.
-Рядом с тобой мне не нужно притворяться, я могу быть собой. И это, пожалуй, самое ценное.
-Иногда я ловлю себя на мысли, что хочу остановить время — просто побыть рядом, хоть немного.
-В мире, где всё меняется каждую секунду, ты — редкое ощущение покоя.
-Я люблю тебя. Искренне, глубоко, без громких слов и драм.
-И я бесконечно дорожу тем, что ты появилась в моей жизни.
-Это одно из самых счастливых совпадений, за которые я благодарен судьбе каждый день.`.split('\n');
+    const lines = [
+      "С тобой даже самый обычный день кажется особенным.",
+      "Ты умеешь молчать так, что в этой тишине становится по-настоящему спокойно — уютно.",
+      "Рядом с тобой мне не нужно притворяться, я могу быть собой. И это, пожалуй, самое ценное.",
+      "Иногда я ловлю себя на мысли, что хочу остановить время — просто побыть рядом, хоть немного.",
+      "В мире, где всё меняется каждую секунду, ты — редкое ощущение покоя.",
+      "Я люблю тебя. Искренне, глубоко, без громких слов и драм.",
+      "И я бесконечно дорожу тем, что ты появилась в моей жизни.",
+      "Это одно из самых счастливых совпадений, за которые я благодарен судьбе каждый день."
+    ];
 
-    const textDiv = document.getElementById('text');
-    const questionDiv = document.getElementById('question');
+    let currentLine = 0;
 
-    let i = 0;
-    function showLine() {
-      if (i < text.length) {
-        const p = document.createElement('p');
-        p.textContent = text[i];
-        textDiv.appendChild(p);
-        i++;
-        setTimeout(showLine, 2500);
+    const startScreen = document.getElementById("start-screen");
+    const content = document.getElementById("content");
+    const final = document.getElementById("final");
+    const text = document.getElementById("text");
+    const music = document.getElementById("music");
+
+    function start() {
+      startScreen.style.opacity = "0";
+      setTimeout(() => {
+        startScreen.style.display = "none";
+        content.style.opacity = "1";
+        content.style.pointerEvents = "auto";
+        text.textContent = lines[currentLine];
+        music.play();
+      }, 1000);
+    }
+
+    function changeLine(direction) {
+      text.style.opacity = "0";
+      setTimeout(() => {
+        currentLine += direction;
+        text.textContent = lines[currentLine];
+        text.style.opacity = "1";
+      }, 600);
+    }
+
+    function nextLine() {
+      if (currentLine < lines.length - 1) {
+        changeLine(1);
       } else {
-        questionDiv.style.display = 'block';
+        content.style.opacity = "0";
+        setTimeout(() => {
+          content.style.display = "none";
+          final.style.opacity = "1";
+          final.style.pointerEvents = "auto";
+        }, 1000);
       }
     }
-    showLine();
+
+    function prevLine() {
+      if (currentLine > 0) {
+        changeLine(-1);
+      }
+    }
+
+    function accept() {
+      // Hide the question and buttons
+      final.style.opacity = "0";
+      final.style.pointerEvents = "none";
+
+      // Launch fireworks
+      launchFireworks();
+    }
+
+    function decline() {
+      const all = document.querySelectorAll("*");
+      all.forEach(el => {
+        el.style.transition = "transform 1s ease, opacity 1s ease";
+        el.style.transform = `translateY(${Math.random() * 500 + 200}px) rotate(${Math.random() * 360}deg)`;
+        el.style.opacity = "0";
+      });
+    }
+
+    // Fireworks script
+    const rndColor = () => {
+      const base = Math.random() * 360 | 0;
+      const color = (275 * (base / 200 | 0)) + base % 200;
+      return fac => `hsl(${color}, ${(fac || 1) * 100}%, ${(fac || 1) * 60}%)`;
+    };
+
+    class Battery {
+      constructor(fireworks) {
+        this.fireworks = fireworks;
+        this.salve = [];
+        this.x = Math.random();
+        this.t = 0;
+        this.tmod = 20 + Math.random() * 20 | 0;
+        this.tmax = 500 + Math.random() * 1000;
+
+        this._shot = salve => {
+          if (salve.y < salve.ym) {
+            salve.cb = this._prepareExplosion;
+          }
+
+          salve.x += salve.mx;
+          salve.y -= 0.01;
+
+          const r = Math.atan2(-0.01, salve.mx);
+
+          this.fireworks.engine.strokeStyle = salve.c(.7);
+          this.fireworks.engine.beginPath();
+
+          this.fireworks.engine.moveTo(
+            (this.x + salve.x) * this.fireworks.width + Math.cos(r) * 4,
+            salve.y * this.fireworks.height + Math.sin(r) * 4
+          );
+
+          this.fireworks.engine.lineTo(
+            (this.x + salve.x) * this.fireworks.width + Math.cos(r + Math.PI) * 4,
+            salve.y * this.fireworks.height + Math.sin(r + Math.PI) * 4
+          );
+
+          this.fireworks.engine.lineWidth = 3;
+          this.fireworks.engine.stroke();
+        };
+
+        this._prepareExplosion = salve => {
+          salve.explosion = [];
+          for (let i = 0, max = 32; i < max; i++) {
+            salve.explosion.push({
+              r: 2 * i / Math.PI,
+              s: 0.5 + Math.random() * 0.5,
+              d: 0,
+              y: 0
+            });
+          }
+
+          salve.cb = this._explode;
+        };
+
+        this._explode = salve => {
+          this.fireworks.engine.fillStyle = salve.c();
+
+          salve.explosion.forEach(explo => {
+            explo.d += explo.s;
+            explo.s *= 0.99;
+            explo.y += 0.5;
+
+            const alpha = explo.s * 2.5;
+            this.fireworks.engine.globalAlpha = alpha;
+
+            if (alpha < 0.05) {
+              salve.cb = null;
+            }
+
+            this.fireworks.engine.fillRect(
+              Math.cos(explo.r) * explo.d + (this.x + salve.x) * this.fireworks.width,
+              Math.sin(explo.r) * explo.d + explo.y + salve.y * this.fireworks.height,
+              3,
+              3
+            );
+          });
+
+          this.fireworks.engine.globalAlpha = 1;
+        };
+      }
+
+      pushSalve() {
+        this.salve.push({
+          x: 0,
+          mx: -0.02 * Math.random() * 0.04,
+          y: 1,
+          ym: 0.05 + Math.random() * 0.5,
+          c: rndColor(),
+          cb: this._shot
+        });
+      }
+
+      render() {
+        this.t++;
+
+        if (this.t < this.tmax && (this.t % this.tmod) === 0) {
+          this.pushSalve();
+        }
+
+        let rendered = false;
+
+        this.salve.forEach(salve => {
+          if (salve.cb) {
+            rendered = true;
+            salve.cb(salve);
+          }
+        });
+
+        if (this.t > this.tmax) {
+          return rendered;
+        }
+
+        return true;
+      }
+    }
+
+    class Fireworks {
+      constructor() {
+        this.canvas = window.document.querySelector('canvas');
+        this.engine = this.canvas.getContext('2d');
+        this.stacks = new Map();
+
+        this.resize();
+      }
+
+      resize() {
+        this.width = window.innerWidth;
+        this.height = window.innerHeight;
+
+        this.canvas.setAttribute('width', this.width);
+        this.canvas.setAttribute('height', this.height);
+      }
+
+      clear() {
+        this.engine.clearRect(0, 0, this.width, this.height);
+        this.engine.fillStyle = '#222';
+        this.engine.fillRect(0, 0, this.width, this.height);
+      }
+
+      addBattery() {
+        const bat = new Battery(this);
+        this.stacks.set(Date.now(), bat);
+      }
+
+      render() {
+        if (Math.random() < 0.05) {
+          this.addBattery();
+        }
+
+        this.clear();
+
+        this.stacks.forEach((scene, key) => {
+          const rendered = scene.render();
+
+          if (!rendered) {
+            this.stacks.delete(key);
+          }
+        });
+
+        requestAnimationFrame(this.render.bind(this));
+      }
+
+      run() {
+        for (let i = 0; i < 5; i++) {
+          this.addBattery();
+        }
+        window.addEventListener('resize', this.resize.bind(this));
+        this.render();
+      }
+    }
+
+    const launchFireworks = () => {
+      const fireworks = new Fireworks();
+      fireworks.run();
+    };
   </script>
 </body>
 </html>
