--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
 
     #text {
       font-size: 1.5em;
-      margin-bottom: 30px;
+      margin-bottom: 3%;
       max-width: 600px;
       line-height: 1.5;
-      min-height: 120px;
+      min-height: 20px;
       opacity: 1;
       transition: opacity 0.6s ease;
     }
