--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   </div>
 
   <div id="content">
-    <div id="text"></div>
+    <div id="text" style="white-space: pre-line;"></div>
     <div id="nav-buttons">
       <button class="btn" onclick="prevLine()">Назад</button>
       <button class="btn" onclick="nextLine()">Вперёд</button>
@@ -107,16 +107,31 @@
 
   <audio id="music" src="music.mp3"></audio>
 
+  
+
   <script>
     const lines = [
-      "С тобой даже самый обычный день кажется особенным.",
+      "С тобой даже самый обычный день кажется по настоящему особенным.",
       "Ты умеешь молчать так, что в этой тишине становится по-настоящему спокойно — уютно.",
-      "Рядом с тобой мне не нужно притворяться, я могу быть собой. И это, пожалуй, самое ценное.",
+      "Рядом с тобой мне не нужно притворяться, я могу быть собой. \nИ это, пожалуй, самое ценное.",
       "Иногда я ловлю себя на мысли, что хочу остановить время — просто побыть рядом, хоть немного.",
       "В мире, где всё меняется каждую секунду, ты — редкое ощущение покоя.",
-      "Я люблю тебя. Искренне, глубоко, без громких слов и драм.",
-      "И я бесконечно дорожу тем, что ты появилась в моей жизни.",
-      "Это одно из самых счастливых совпадений, за которые я благодарен судьбе каждый день."
+      "Я люблю тебя. \nИскренне, глубоко, без громких слов и драм.",
+      "Я бесконечно дорожу тем, что ты появилась в моей жизни.",
+      "Это одно из самых счастливых совпадений, за которые я благодарен судьбе каждый день.",
+      "Иногда мы спорим. Иногда раним друг друга словами. \nНо это не потому, что не любим. А потому, что нам не всё равно.",
+      "Любовь — это не всегда про идеальные моменты. Иногда это борьба: за нас, за понимание, за доверие.",
+      "Наши взлёты делают меня счастливым. Наши падения — сильнее.",
+      "Мы падаем, но встаём. \nУчимся слышать, учимся прощать, учимся любить заново.",
+      "Я делал ошибки. \nИ, возможно, не всегда был тем, кого ты заслуживаешь.",
+      "Но всё, что я чувствую к тебе \n— по-настоящему. \nБез фальши. \nБез условий.",
+      "Ты — мой дом. \nТихий, тёплый, настоящий.",
+      "Я не прошу забыть. \nЯ прошу дать шанс всё исправить и стать лучше ради нас.",
+      "Ты не просто часть моей жизни. \nТы — причина, по которой я хочу её строить.",
+      "Если ты всё ещё чувствуешь хоть каплю тепла ко мне — пусть она станет нашим новым началом.",
+      "В этой жизни я не хочу многого. \nТолько одного — идти дальше вместе с тобой.",
+      "И если ты готова… давай попробуем снова.",
+      "На этот раз — осознанно. \nТеплее. \nМудрее. \nПо-настоящему."
     ];
 
     let currentLine = 0;
@@ -124,7 +139,8 @@
     const startScreen = document.getElementById("start-screen");
     const content = document.getElementById("content");
     const final = document.getElementById("final");
-    const text = document.getElementById("text");
+    const textDiv = document.getElementById("text");
+    textDiv.textContent = lines.join("\n\n");
     const music = document.getElementById("music");
 
     function start() {
